# aoc17

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  common.cpp  common.h  days.cpp  days.h  macros.h  main.cpp
tests/: CMakeLists.txt  tests.cpp
